--- a/src/pages/granel-market/index.css
+++ b/src/pages/granel-market/index.css
@@ -13,11 +13,12 @@
     top:0;
     left: 0;
     height: 100px;
-    background-image: url(./logo.png);
+    background-image: url(./logo2.png);
     background-repeat: no-repeat;
-    background-size: 75px;
-    background-position-y: -8px;
-    background-color: var(--color_2);
+    background-size: 280px;
+    background-position-y: -30px;
+    background-position-x: -60px ;
+    background-color: var(--color_3);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
