--- a/src/pages/homemarket/index.css
+++ b/src/pages/homemarket/index.css
@@ -13,7 +13,7 @@
     top:0;
     left: 0;
     height: 110px;
-    background-image: url(./logo.png);
+    background-image: url(./logo2.png);
     background-repeat: no-repeat;
     background-size: 75px;
     background-position-y: -8px;
@@ -23,7 +23,7 @@
 
 .input {
     width: 48.5vw;
-    border: solid 0.5px var(--color_3);
+    border: solid 0.5px var(--color_2);
     border-radius: 30px;
     height: 40px;
     margin-top: 1.5vh;
@@ -45,7 +45,7 @@
 }
 
 .nav {
-    color: var(--color_3);
+    color: var(--color_2);
     margin-top: 3vh;
     margin-left: 15vw;
 }
