--- a/src/pages/granel-market/index.css
+++ b/src/pages/granel-market/index.css
@@ -12,7 +12,7 @@
     position: fixed;
     top:0;
     left: 0;
-    height: 100px;
+    height: 14vh;
     background-image: url(./logo2.png);
     background-repeat: no-repeat;
     background-size: 280px;
